[gd_scene load_steps=2 format=3 uid="uid://dauc8c0odklew"]

[ext_resource type="Script" path="res://choicepaths/choicesesss/PilgrimTrade.gd" id="1_5lqnf"]

[node name="ChoiceSceneTemplate" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5lqnf")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "You begin packing for the perilous journey ahead. A merchant is exchanging supplies for trinkets. The townspeople look to you for advice on what to do"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_top = 465.0
offset_right = 1152.0
grow_vertical = 2

[node name="Button" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "the glob"
autowrap_mode = 2

[node name="Button2" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "the glob"
autowrap_mode = 2

[node name="Button3" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "the glob"
autowrap_mode = 2

[node name="Button4" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "the glob"
autowrap_mode = 2

[node name="ExitButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.5
offset_top = -151.0
offset_right = 75.5
grow_horizontal = 2
grow_vertical = 0
text = "Onwards..."

[connection signal="pressed" from="Panel/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="Panel/ExitButton" to="." method="_on_exit_button_pressed"]
